--- a/IndexStyle.css
+++ b/IndexStyle.css
@@ -23,7 +23,7 @@ body {
   }
   #logo {
     width: 5%;
-    height: 81px;
+    height: 5%;
     margin: 0%;
   }
   #texto-logo {
@@ -39,7 +39,7 @@ body {
   #barra-pesquisa {
     margin-top: 16px;
     width: 25%;
-    height:47px;
+    height:30%;
 
     background-color: #123D2C;
   }
@@ -52,7 +52,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     list-style: none;
     display: flex;
-    
+    height: 96.5%;
     
    
     
@@ -62,7 +62,7 @@ body {
     font-size: 30px;
     border-right: solid 2px gray;
     width: 100%;
-    height: 78px;
+    
     text-align: center;
     padding-left: 20px;
     padding-right: 20px;
@@ -97,8 +97,8 @@ body {
 
   }
   #img-logo {
-    width: 86px;
-    height: 81px;
+    width: 100%;
+    height: 2000%;
   }
   #texto {
     text-decoration: none;
