--- a/StoreStyle.css
+++ b/StoreStyle.css
@@ -12,15 +12,15 @@
     }
     #nav {
       background-color: #123D2C;
-      height: 81px;
-      width: 100%;
+      height: 8.4%;
+    widht: 100%;
       display: flex;
       margin: 0;
     }
     #logo {
       width: 5%;
-      height: 81px;
-      margin: 0%;
+    height: 5%;
+    margin: 0%;
     }
     #texto-logo {
       margin-left: 15px;
@@ -47,7 +47,7 @@
       font-family: Arial, Helvetica, sans-serif;
       list-style: none;
       display: flex;
-      
+      height: 96.5%;
       
      
       
@@ -57,7 +57,6 @@
       font-size: 30px;
       border-right: solid 2px gray;
       width: 100%;
-      height: 78px;
       text-align: center;
       padding-left: 20px;
       padding-right: 20px;
@@ -155,90 +154,113 @@
     }
   #barraca {
       
-      float: left;
-      width: 290px;
-      height: 290px;
+      width: 15.5%;
+      height: 15.5%;
       border: 3px solid black;
       margin-left: 10%;
       margin-top: 5%;
       display: inline-block;
+      cursor: pointer;
+      }
+      #barraca:hover {
+        opacity: 0.8;
       }
   
   #img-barraca {
-    width: 290px;
+    width: 100%;
     height: 200px;
     display: block;
   
   }
   #cantil {
-      width: 290px;
-      height: 290px;
+    width: 15.5%;
+    height: 15.5%;
       border: 3px solid black;
       display: inline-block;
     margin-left: 15%;
     margin-right:15%;
+    cursor: pointer;
+  }
+  #cantil:hover {
+    opacity: 0.8;
   }
   
   #img-cantil {
-    width: 290px;
+    width: 100%;
     height: 200px;
     display: block;
   
   }
   #isqueiro {
-    width: 290px;
-      height: 290px;
+    width: 15.5%;
+      height: 15.5%;
       border: 3px solid black;
       display: inline-block;
       margin-top: 5%;
+      cursor: pointer;
+  }
+  #isqueiro:hover {
+    opacity: 0.8;
   }
   
   #img-isqueiro {
-    width: 290px;
+    width: 100%;
     height: 200px;
     display: block;
   
   }
   #faca {
-    width: 290px;
-      height: 290px;
+    width: 15.5%;
+      height: 15.5%;
       border: 3px solid black;
       display: inline-block;
     margin-left: 10%;
+    cursor: pointer;
+  }
+  #faca:hover {
+    opacity: 0.8;
   }
   
   #img-faca {
-    width: 290px;
+    width: 100%;
     height: 200px;
     display: block;
     
   }
   
   #kit {
-    width: 290px;
-      height: 290px;
+    width: 15.5%;
+      height: 15.5%;
       border: 3px solid black;
       display: inline-block;
     margin-left:15%;
     margin-right:15%;
     margin-top: 6%;
+    cursor: pointer;
+  }
+  #kit:hover {
+    opacity: 0.8;
   }
   
   #img-kit {
-    width: 290px;
+    width: 100%;
     height: 200px;
     display: block;
   
   }
   #purificador {
-    width: 290px;
-      height: 290px;
+    width: 15.5%;
+      height: 15.5%;
       border: 3px solid black;
       display: inline-block;
+      cursor: pointer;
+  }
+  #purificador:hover {
+    opacity: 0.8;
   }
   
   #img-purificador {
-    width: 290px;
+    width: 100%;
     height: 200px;
     display: block;
     
