--- a/ContactStyle.css
+++ b/ContactStyle.css
@@ -25,26 +25,25 @@
     margin: 0%;
     }
     #texto-logo {
-      margin-left: 15px;
-      text-align: left;
-      padding-top: 20px;
-      font-size: 2vw;
-      width: 35%;
-      background-color: #123D2C;
-      font-family: Arial, Helvetica, sans-serif;
+      margin-left: 1%;
+    text-align: left;
+    padding-top: 1.1%;
+    font-size: 2vw;
+    width: 35%;
+    background-color: #123D2C;
+    font-family: Arial, Helvetica, sans-serif;
       
     }
     #barra-pesquisa {
-      margin-top: 16px;
+      margin-top: 1%;
       width: 25%;
-      height:47px;
+      height:30%;
   
       background-color: #123D2C;
     }
     #menu {
       background-color: #123D2C;
       width: 35%;
-      
     }
     #menu-list {
       font-family: Arial, Helvetica, sans-serif;
@@ -55,7 +54,6 @@
      
       
     }
-    
   
     #menu-list > li{
       font-size: 30px;
@@ -66,7 +64,9 @@
       padding-right: 20px;
       display: block;
       padding-top: 0.5%;
+  
     }
+   
     #home {
       height: 100%;
     }
@@ -86,12 +86,13 @@
       background-color: #091f16;
     }
     .link {
-      text-decoration: none;
-      color: white;
-      display: block;
-      margin-top: 19px;
   
+      text-decoration: none;
+    color: white;
+    display: block;
+    margin-top: 10%;
     }
+    
     #img-logo {
       width: 100%;
     height: 2000%;
