--- a/IndexStyle.css
+++ b/IndexStyle.css
@@ -27,9 +27,9 @@ body {
     margin: 0%;
   }
   #texto-logo {
-    margin-left: 15px;
+    margin-left: 1%;
     text-align: left;
-    padding-top: 20px;
+    padding-top: 1.1%;
     font-size: 2vw;
     width: 35%;
     background-color: #123D2C;
@@ -37,7 +37,7 @@ body {
     
   }
   #barra-pesquisa {
-    margin-top: 16px;
+    margin-top: 1%;
     width: 25%;
     height:30%;
 
@@ -64,8 +64,8 @@ body {
     width: 100%;
     
     text-align: center;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 1.5%;
+    padding-right: 1.5%;
     display: block;
     padding-top: 0.5%;
   }
@@ -93,7 +93,7 @@ body {
     text-decoration: none;
     color: white;
     display: block;
-    margin-top: 19px;
+    margin-top: 10%;
 
   }
   #img-logo {
