--- a/StoreStyle.css
+++ b/StoreStyle.css
@@ -23,19 +23,19 @@
     margin: 0%;
     }
     #texto-logo {
-      margin-left: 15px;
-      text-align: left;
-      padding-top: 20px;
-      font-size: 2vw;
-      width: 35%;
-      background-color: #123D2C;
-      font-family: Arial, Helvetica, sans-serif;
+      margin-left: 1%;
+    text-align: left;
+    padding-top: 1.1%;
+    font-size: 2vw;
+    width: 35%;
+    background-color: #123D2C;
+    font-family: Arial, Helvetica, sans-serif;
       
     }
     #barra-pesquisa {
-      margin-top: 16px;
+      margin-top: 1%;
       width: 25%;
-      height:47px;
+      height:30%;
   
       background-color: #123D2C;
     }
@@ -86,9 +86,9 @@
     .link {
   
       text-decoration: none;
-      color: white;
-      display: block;
-      margin-top: 19px;
+    color: white;
+    display: block;
+    margin-top: 10%;
   
     }
     #img-logo {
