--- a/IndexStyle.css
+++ b/IndexStyle.css
@@ -107,8 +107,8 @@ body {
   #txt-pesquisa {
     border-radius: 2px;
     background-color: D9D9D9;
-    width: 400px;
-    height: 40px;
+    width: 90%;
+    height: 170%;
     border-color:black;
     border-style:solid;
     border-width: 2px;
@@ -116,7 +116,7 @@ body {
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: 98%;
-    padding-left: 10px;
+    padding-left: 1.5%;
     color:#123D2C;
     font-size: 20px;
   }
