--- a/ContactStyle.css
+++ b/ContactStyle.css
@@ -92,7 +92,7 @@
     display: block;
     margin-top: 10%;
     }
-    
+
     #img-logo {
       width: 100%;
     height: 2000%;
@@ -102,20 +102,20 @@
       color: white;
     }
     #txt-pesquisa {
-      border-radius: 2px;
-      background-color: D9D9D9;
-      width: 400px;
-      height: 40px;
-      border-color:black;
-      border-style:solid;
-      border-width: 2px;
-      background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/55/Magnifying_glass_icon.svg");
-      background-size: 20px;
-      background-repeat: no-repeat;
-      background-position: 98%;
-      padding-left: 10px;
-      color:#123D2C;
-      font-size: 20px;
+    border-radius: 2px;
+    background-color: D9D9D9;
+    width: 90%;
+    height: 170%;
+    border-color:black;
+    border-style:solid;
+    border-width: 2px;
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/55/Magnifying_glass_icon.svg");
+    background-size: 20px;
+    background-repeat: no-repeat;
+    background-position: 98%;
+    padding-left: 1.5%;
+    color:#123D2C;
+    font-size: 20px;
     }
     #menu-list  > li:last-child {
      border: none;
