--- a/StoreStyle.css
+++ b/StoreStyle.css
@@ -102,8 +102,8 @@
     #txt-pesquisa {
       border-radius: 2px;
       background-color: D9D9D9;
-      width: 400px;
-      height: 40px;
+      width: 90%;
+      height: 170%;
       border-color:black;
       border-style:solid;
       border-width: 2px;
@@ -111,7 +111,7 @@
       background-size: 20px;
       background-repeat: no-repeat;
       background-position: 98%;
-      padding-left: 10px;
+      padding-left: 1.5%;
       color:#123D2C;
       font-size: 20px;
     }
