--- a/StoreStyle.css
+++ b/StoreStyle.css
@@ -19,23 +19,23 @@
     }
     #logo {
       width: 5%;
-    height: 5%;
-    margin: 0%;
+      height: 81px;
+      margin: 0%;
     }
     #texto-logo {
-      margin-left: 1%;
-    text-align: left;
-    padding-top: 1.1%;
-    font-size: 2vw;
-    width: 35%;
-    background-color: #123D2C;
-    font-family: Arial, Helvetica, sans-serif;
+      margin-left: 15px;
+      text-align: left;
+      padding-top: 20px;
+      font-size: 2vw;
+      width: 35%;
+      background-color: #123D2C;
+      font-family: Arial, Helvetica, sans-serif;
       
     }
     #barra-pesquisa {
       margin-top: 1%;
       width: 25%;
-      height:30%;
+      height: 5%;
   
       background-color: #123D2C;
     }
@@ -47,7 +47,7 @@
       font-family: Arial, Helvetica, sans-serif;
       list-style: none;
       display: flex;
-      height: 96.5%;
+      
       
      
       
@@ -57,6 +57,7 @@
       font-size: 30px;
       border-right: solid 2px gray;
       width: 100%;
+      height: 78px;
       text-align: center;
       padding-left: 20px;
       padding-right: 20px;
@@ -86,9 +87,9 @@
     .link {
   
       text-decoration: none;
-    color: white;
-    display: block;
-    margin-top: 10%;
+      color: white;
+      display: block;
+      margin-top: 19px;
   
     }
     #img-logo {
@@ -101,9 +102,8 @@
     }
     #txt-pesquisa {
       border-radius: 2px;
-      background-color: D9D9D9;
-      width: 90%;
-      height: 170%;
+      width: 400px;
+      height: 40px;
       border-color:black;
       border-style:solid;
       border-width: 2px;
@@ -111,7 +111,7 @@
       background-size: 20px;
       background-repeat: no-repeat;
       background-position: 98%;
-      padding-left: 1.5%;
+      padding-left: 10px;
       color:#123D2C;
       font-size: 20px;
     }
